# it-school-hello-world-test-task

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
config/: celery.py  logger.py  settings.py
config/settings/: base.py
test_app/: admin.py  apps.py  models.py  signals.py  tasks.py  tests.py
test_app/migrations/: 0001_initial.py
test_app/tests/: conftest.py  test_tasks.py
